@@ -5,6 +5,8 @@
 * added more structure block processors to accomodate some builds from the build-a-thon
 * added config for auto compatible items to be salvagable
 * made mobs in maps not take dmg from being stuck in wall, also they get knocked back around until they get unstuck now!
+* made my dungeon gen code a bit neater. Now i can make it so certain dungeon themes can only have certain other dungeon themes!
+Like i can set it so a snowy theme can't spawn together with a nether theme. This wasn't a problem when i only had stone brick and sandstone themes, but now it is.
 
 Build-a-thon results:
 * Added whole new dungeon themes you'll see often: icy spruce mansion, nature, mossy brick and mineshaft.
